--- a/tailwind/custom/featured-post.css
+++ b/tailwind/custom/featured-post.css
@@ -22,5 +22,4 @@
 }
 
 .featured-post.wp-block-query .wp-block-columns {
-    @apply lg:w-7xl;
-}
+} 
